--- a/index.html
+++ b/index.html
@@ -37,7 +37,26 @@
 			</div>
 		</nav>
 		<!--========================== END OF NAVBAR ============================-->
-		
+		<header>
+			<div class="container header__container">
+				<div class="header__left">
+					<h1>Learn for fun or to enhance your career</h1>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+						Quidem neque tempora enim est eligendi ratione in corporis, 
+						animi dolorum provident.</p>
+					<a href="courses.html" class="btn btn-primary">Start Now</a>
+
+				</div>
+				<div class="header__right">
+					<div class="header__right-image">
+						<img src="./images/header.svg" alt="logo">
+
+					</div>
+
+				</div>
+			</div>
+		</header>
+		 <!-- END HEADER -->
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
