--- a/index.html
+++ b/index.html
@@ -58,6 +58,53 @@
 		</header>
 		 <!-- END HEADER -->
 
+		 <section class="categories">
+			<div class="container categories__container">
+				<div class="categories__left">
+					<h1>Categories</h1>
+					<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero nostrum neque corporis, 
+						ratione eos, quasi alias eum ut hic minus totam quo cum, 
+						quam dolor repellat quae error officia tempora!</p>
+
+					<a href="#" class="btn">Learn More</a>
+				</div>
+				<div class="categories__right">
+					<article class="category">
+						<span class="category__icon"> <i class="uil uil-bitcoin-circle"></i></span>
+						<h5>BlockChain</h5>
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, dolores.</p>
+					</article>
+					<article class="category">
+						<span class="category__icon"> <i class="uil uil-bitcoin-circle"></i></span>
+						<h5>BlockChain</h5>
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, dolores.</p>
+					</article>
+					<article class="category">
+						<span class="category__icon"> <i class="uil uil-bitcoin-circle"></i></span>
+						<h5>BlockChain</h5>
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, dolores.</p>
+					</article>
+					<article class="category">
+						<span class="category__icon"> <i class="uil uil-bitcoin-circle"></i></span>
+						<h5>BlockChain</h5>
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, dolores.</p>
+					</article>
+					<article class="category">
+						<span class="category__icon"> <i class="uil uil-bitcoin-circle"></i></span>
+						<h5>BlockChain</h5>
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, dolores.</p>
+					</article>
+					<article class="category">
+						<span class="category__icon"> <i class="uil uil-bitcoin-circle"></i></span>
+						<h5>BlockChain</h5>
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, dolores.</p>
+					</article>
+				</div>
+			</div>
+
+			 
+		 </section>
+
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
