--- a/index.html
+++ b/index.html
@@ -68,42 +68,105 @@
 
 					<a href="#" class="btn">Learn More</a>
 				</div>
-				<div class="categories__right">
-					<article class="category">
-						<span class="category__icon"> <i class="uil uil-bitcoin-circle"></i></span>
-						<h5>BlockChain</h5>
-						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, dolores.</p>
-					</article>
-					<article class="category">
-						<span class="category__icon"> <i class="uil uil-bitcoin-circle"></i></span>
-						<h5>BlockChain</h5>
-						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, dolores.</p>
-					</article>
-					<article class="category">
-						<span class="category__icon"> <i class="uil uil-bitcoin-circle"></i></span>
-						<h5>BlockChain</h5>
-						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, dolores.</p>
-					</article>
-					<article class="category">
-						<span class="category__icon"> <i class="uil uil-bitcoin-circle"></i></span>
-						<h5>BlockChain</h5>
-						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, dolores.</p>
-					</article>
-					<article class="category">
-						<span class="category__icon"> <i class="uil uil-bitcoin-circle"></i></span>
-						<h5>BlockChain</h5>
-						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, dolores.</p>
-					</article>
-					<article class="category">
-						<span class="category__icon"> <i class="uil uil-bitcoin-circle"></i></span>
-						<h5>BlockChain</h5>
-						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, dolores.</p>
-					</article>
+				<article class="category">
+					<span class="category__icon">
+					  <i class="uil uil-bitcoin-circle"></i>
+					</span>
+					<h5>Blockchain</h5>
+					<p>Lorem ipsum dolor sit amet consectetur, elit temporibus, qui.</p>
+				  </article>
+		
+				  <article class="category">
+					<span class="category__icon">
+					  <i class="uil uil-palette"></i>
+					</span>
+					<h5>Graphic Design</h5>
+					<p>Lorem ipsum dolor sit amet consectetur, elit temporibus, qui.</p>
+				  </article>
+		
+				  <article class="category">
+					<span class="category__icon">
+					  <i class="uil uil-usd-circle"></i>
+					</span>
+					<h5>Finance</h5>
+					<p>Lorem ipsum dolor sit amet consectetur, elit temporibus, qui.</p>
+				  </article>
+		
+				  <article class="category">
+					<span class="category__icon">
+					  <i class="uil uil-megaphone"></i>
+					</span>
+					<h5>Marketing</h5>
+					<p>Lorem ipsum dolor sit amet consectetur, elit temporibus, qui.</p>
+				  </article>
+		
+				  <article class="category">
+					<span class="category__icon">
+					  <i class="uil uil-music"></i>
+					</span>
+					<h5>Music</h5>
+					<p>Lorem ipsum dolor sit amet consectetur, elit temporibus, qui.</p>
+				  </article>
+		
+				  <article class="category">
+					<span class="category__icon">
+					  <i class="uil uil-puzzle-piece"></i>
+					</span>
+					<h5>Business</h5>
+					<p>Lorem ipsum dolor sit amet consectetur, elit temporibus, qui.</p>
+				  </article>
 				</div>
 			</div>
 
 			 
 		 </section>
+
+		 <!-- end categories -->
+
+
+		 <section class="courses">
+			<h2>Our Popular Courses</h2>
+			<div class="container courses__container">
+			  <article class="course">
+				  <div class="course__image">
+					  <img src="./images/course1.jpg">
+				  </div>
+				  <div class="course__info">
+					  <h4>Responsive Social Media Website UI Design</h4>
+					  <p>
+						  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam deserunt eaque quos iure ad debitis.
+					  </p>
+					  <a href="course.html" class="btn btn-primary">Learn More</a>
+				  </div>
+			  </article>
+  
+			  <article class="course">
+				  <div class="course__image">
+					  <img src="./images/course2.jpg">
+				  </div>
+				  <div class="course__info">
+					  <h4>Responsive SmartHome Website Design</h4>
+					  <p>
+						  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam deserunt eaque quos iure ad debitis.
+					  </p>
+					  <a href="course.html" class="btn btn-primary">Learn More</a>
+				  </div>
+			  </article>
+  
+			  <article class="course">
+				  <div class="course__image">
+					  <img src="./images/course3.jpg">
+				  </div>
+				  <div class="course__info">
+					  <h4>Responsive Admin Dashboard UI Design</h4>
+					  <p>
+						  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam deserunt eaque quos iure ad debitis.
+					  </p>
+					  <a href="course.html" class="btn btn-primary">Learn More</a>
+				  </div>
+			  </article>
+			</div>
+		</section>
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
