--- a/index.html
+++ b/index.html
@@ -1,173 +1,288 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Responsive Multipage Education Website Using HTML, CSS & JavaSCript</title>
-	
-		<!-- ICONSCOUT CDN -->
-		<link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
-	
-		<!-- GOOGLE FONTS (MONTSERRAT) -->
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-	
-	
-		<!-- SWIPER JS -->
-		<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
-	
-	
-		<link rel="stylesheet" href="./css/style.css">
-	
-	</head>
-	<body>
-		<nav>
-			<div class="container nav__container">
-				<a href="index.html"><h4>EDU4ALL</h4></a>
-				<ul class="nav__menu">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="courses.html">Courses</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-				<button id="open-menu-btn"><i class="uil uil-bars"></i></button>
-				<button id="close-menu-btn"><i class="uil uil-multiply"></i></button>
+
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Responsive Multipage Education Website Using HTML, CSS & JavaSCript</title>
+
+	<!-- ICONSCOUT CDN -->
+	<link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
+
+	<!-- GOOGLE FONTS (MONTSERRAT) -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap"
+		rel="stylesheet">
+
+
+	<!-- SWIPER JS -->
+	<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+
+
+	<link rel="stylesheet" href="./css/style.css">
+
+</head>
+
+<body>
+	<nav>
+		<div class="container nav__container">
+			<a href="index.html">
+				<h4>EDU4ALL</h4>
+			</a>
+			<ul class="nav__menu">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="courses.html">Courses</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+			<button id="open-menu-btn"><i class="uil uil-bars"></i></button>
+			<button id="close-menu-btn"><i class="uil uil-multiply"></i></button>
+		</div>
+	</nav>
+	<!--========================== END OF NAVBAR ============================-->
+	<header>
+		<div class="container header__container">
+			<div class="header__left">
+				<h1>Learn for fun or to enhance your career</h1>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					Quidem neque tempora enim est eligendi ratione in corporis,
+					animi dolorum provident.</p>
+				<a href="courses.html" class="btn btn-primary">Start Now</a>
+
 			</div>
-		</nav>
-		<!--========================== END OF NAVBAR ============================-->
-		<header>
-			<div class="container header__container">
-				<div class="header__left">
-					<h1>Learn for fun or to enhance your career</h1>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-						Quidem neque tempora enim est eligendi ratione in corporis, 
-						animi dolorum provident.</p>
-					<a href="courses.html" class="btn btn-primary">Start Now</a>
+			<div class="header__right">
+				<div class="header__right-image">
+					<img src="./images/header.svg" alt="logo">
 
 				</div>
-				<div class="header__right">
-					<div class="header__right-image">
-						<img src="./images/header.svg" alt="logo">
 
-					</div>
-
-				</div>
 			</div>
-		</header>
-		 <!-- END HEADER -->
+		</div>
+	</header>
+	<!-- END HEADER -->
 
-		 <section class="categories">
-			<div class="container categories__container">
-				<div class="categories__left">
-					<h1>Categories</h1>
-					<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero nostrum neque corporis, 
-						ratione eos, quasi alias eum ut hic minus totam quo cum, 
-						quam dolor repellat quae error officia tempora!</p>
+	<section class="categories">
+		<div class="container categories__container">
+			<div class="categories__left">
+				<h1>Categories</h1>
+				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero nostrum neque corporis,
+					ratione eos, quasi alias eum ut hic minus totam quo cum,
+					quam dolor repellat quae error officia tempora!</p>
 
-					<a href="#" class="btn">Learn More</a>
-				</div>
-				<article class="category">
-					<span class="category__icon">
-					  <i class="uil uil-bitcoin-circle"></i>
-					</span>
-					<h5>Blockchain</h5>
-					<p>Lorem ipsum dolor sit amet consectetur, elit temporibus, qui.</p>
-				  </article>
-		
-				  <article class="category">
-					<span class="category__icon">
-					  <i class="uil uil-palette"></i>
-					</span>
-					<h5>Graphic Design</h5>
-					<p>Lorem ipsum dolor sit amet consectetur, elit temporibus, qui.</p>
-				  </article>
-		
-				  <article class="category">
-					<span class="category__icon">
-					  <i class="uil uil-usd-circle"></i>
-					</span>
-					<h5>Finance</h5>
-					<p>Lorem ipsum dolor sit amet consectetur, elit temporibus, qui.</p>
-				  </article>
-		
-				  <article class="category">
-					<span class="category__icon">
-					  <i class="uil uil-megaphone"></i>
-					</span>
-					<h5>Marketing</h5>
-					<p>Lorem ipsum dolor sit amet consectetur, elit temporibus, qui.</p>
-				  </article>
-		
-				  <article class="category">
-					<span class="category__icon">
-					  <i class="uil uil-music"></i>
-					</span>
-					<h5>Music</h5>
-					<p>Lorem ipsum dolor sit amet consectetur, elit temporibus, qui.</p>
-				  </article>
-		
-				  <article class="category">
-					<span class="category__icon">
-					  <i class="uil uil-puzzle-piece"></i>
-					</span>
-					<h5>Business</h5>
-					<p>Lorem ipsum dolor sit amet consectetur, elit temporibus, qui.</p>
-				  </article>
-				</div>
+				<a href="#" class="btn">Learn More</a>
 			</div>
+			<article class="category">
+				<span class="category__icon">
+					<i class="uil uil-bitcoin-circle"></i>
+				</span>
+				<h5>Blockchain</h5>
+				<p>Lorem ipsum dolor sit amet consectetur, elit temporibus, qui.</p>
+			</article>
 
-			 
-		 </section>
+			<article class="category">
+				<span class="category__icon">
+					<i class="uil uil-palette"></i>
+				</span>
+				<h5>Graphic Design</h5>
+				<p>Lorem ipsum dolor sit amet consectetur, elit temporibus, qui.</p>
+			</article>
 
-		 <!-- end categories -->
+			<article class="category">
+				<span class="category__icon">
+					<i class="uil uil-usd-circle"></i>
+				</span>
+				<h5>Finance</h5>
+				<p>Lorem ipsum dolor sit amet consectetur, elit temporibus, qui.</p>
+			</article>
+
+			<article class="category">
+				<span class="category__icon">
+					<i class="uil uil-megaphone"></i>
+				</span>
+				<h5>Marketing</h5>
+				<p>Lorem ipsum dolor sit amet consectetur, elit temporibus, qui.</p>
+			</article>
+
+			<article class="category">
+				<span class="category__icon">
+					<i class="uil uil-music"></i>
+				</span>
+				<h5>Music</h5>
+				<p>Lorem ipsum dolor sit amet consectetur, elit temporibus, qui.</p>
+			</article>
+
+			<article class="category">
+				<span class="category__icon">
+					<i class="uil uil-puzzle-piece"></i>
+				</span>
+				<h5>Business</h5>
+				<p>Lorem ipsum dolor sit amet consectetur, elit temporibus, qui.</p>
+			</article>
+		</div>
+		</div>
 
 
-		 <section class="courses">
-			<h2>Our Popular Courses</h2>
-			<div class="container courses__container">
-			  <article class="course">
-				  <div class="course__image">
-					  <img src="./images/course1.jpg">
-				  </div>
-				  <div class="course__info">
-					  <h4>Responsive Social Media Website UI Design</h4>
-					  <p>
-						  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam deserunt eaque quos iure ad debitis.
-					  </p>
-					  <a href="course.html" class="btn btn-primary">Learn More</a>
-				  </div>
-			  </article>
-  
-			  <article class="course">
-				  <div class="course__image">
-					  <img src="./images/course2.jpg">
-				  </div>
-				  <div class="course__info">
-					  <h4>Responsive SmartHome Website Design</h4>
-					  <p>
-						  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam deserunt eaque quos iure ad debitis.
-					  </p>
-					  <a href="course.html" class="btn btn-primary">Learn More</a>
-				  </div>
-			  </article>
-  
-			  <article class="course">
-				  <div class="course__image">
-					  <img src="./images/course3.jpg">
-				  </div>
-				  <div class="course__info">
-					  <h4>Responsive Admin Dashboard UI Design</h4>
-					  <p>
-						  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam deserunt eaque quos iure ad debitis.
-					  </p>
-					  <a href="course.html" class="btn btn-primary">Learn More</a>
-				  </div>
-			  </article>
-			</div>
-		</section>
+	</section>
 
-		<script type="text/javascript" src="js/main.js"></script>
-	</body>
+	<!-- end categories -->
+
+
+	<section class="courses">
+		<h2>Our Popular Courses</h2>
+		<div class="container courses__container">
+			<article class="course">
+				<div class="course__image">
+					<img src="./images/course1.jpg">
+				</div>
+				<div class="course__info">
+					<h4>Responsive Social Media Website UI Design</h4>
+					<p>
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam deserunt eaque quos
+						iure ad debitis.
+					</p>
+					<a href="course.html" class="btn btn-primary">Learn More</a>
+				</div>
+			</article>
+
+			<article class="course">
+				<div class="course__image">
+					<img src="./images/course2.jpg">
+				</div>
+				<div class="course__info">
+					<h4>Responsive SmartHome Website Design</h4>
+					<p>
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam deserunt eaque quos
+						iure ad debitis.
+					</p>
+					<a href="course.html" class="btn btn-primary">Learn More</a>
+				</div>
+			</article>
+
+			<article class="course">
+				<div class="course__image">
+					<img src="./images/course3.jpg">
+				</div>
+				<div class="course__info">
+					<h4>Responsive Admin Dashboard UI Design</h4>
+					<p>
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam deserunt eaque quos
+						iure ad debitis.
+					</p>
+					<a href="course.html" class="btn btn-primary">Learn More</a>
+				</div>
+			</article>
+		</div>
+	</section>
+
+	<!-- end of courses ----------------->
+    <section class="faqs">
+		<h2>Frequently Asked Questions</h2>
+		<div class="container faqs__container">
+			<article class="faq">
+				<div class="faq__icon"><i class="uil uil-plus"></i></div>
+				<div class="question__answer">
+					<h4>How do I know the right courses for me?</h4>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium quis qui similique quidem at voluptatem ex. Est dolorum minima dolor aut ut, accusantium vitae architecto aliquid nostrum numquam quibusdam.
+					</p>
+				</div>
+			</article>
+
+			<article class="faq">
+				<div class="faq__icon"><i class="uil uil-plus"></i></div>
+				<div class="question__answer">
+					<h4>How do I know the right courses for me?</h4>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium quis qui similique quidem at voluptatem ex. Est dolorum minima dolor aut ut, accusantium vitae architecto aliquid nostrum numquam quibusdam.
+					</p>
+				</div>
+			</article>
+
+			<article class="faq">
+				<div class="faq__icon"><i class="uil uil-plus"></i></div>
+				<div class="question__answer">
+					<h4>How do I know the right courses for me?</h4>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium quis qui similique quidem at voluptatem ex. Est dolorum minima dolor aut ut, accusantium vitae architecto aliquid nostrum numquam quibusdam.
+					</p>
+				</div>
+			</article>
+
+			<article class="faq">
+				<div class="faq__icon"><i class="uil uil-plus"></i></div>
+				<div class="question__answer">
+					<h4>How do I know the right courses for me?</h4>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium quis qui similique quidem at voluptatem ex. Est dolorum minima dolor aut ut, accusantium vitae architecto aliquid nostrum numquam quibusdam.
+					</p>
+				</div>
+			</article>
+
+			<article class="faq">
+				<div class="faq__icon"><i class="uil uil-plus"></i></div>
+				<div class="question__answer">
+					<h4>How do I know the right courses for me?</h4>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium quis qui similique quidem at voluptatem ex. Est dolorum minima dolor aut ut, accusantium vitae architecto aliquid nostrum numquam quibusdam.
+					</p>
+				</div>
+			</article>
+
+			<article class="faq">
+				<div class="faq__icon"><i class="uil uil-plus"></i></div>
+				<div class="question__answer">
+					<h4>How do I know the right courses for me?</h4>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium quis qui similique quidem at voluptatem ex. Est dolorum minima dolor aut ut, accusantium vitae architecto aliquid nostrum numquam quibusdam.
+					</p>
+				</div>
+			</article>
+
+			<article class="faq">
+				<div class="faq__icon"><i class="uil uil-plus"></i></div>
+				<div class="question__answer">
+					<h4>How do I know the right courses for me?</h4>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium quis qui similique quidem at voluptatem ex. Est dolorum minima dolor aut ut, accusantium vitae architecto aliquid nostrum numquam quibusdam.
+					</p>
+				</div>
+			</article>
+
+			<article class="faq">
+				<div class="faq__icon"><i class="uil uil-plus"></i></div>
+				<div class="question__answer">
+					<h4>How do I know the right courses for me?</h4>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium quis qui similique quidem at voluptatem ex. Est dolorum minima dolor aut ut, accusantium vitae architecto aliquid nostrum numquam quibusdam.
+					</p>
+				</div>
+			</article>
+
+			<article class="faq">
+				<div class="faq__icon"><i class="uil uil-plus"></i></div>
+				<div class="question__answer">
+					<h4>How do I know the right courses for me?</h4>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium quis qui similique quidem at voluptatem ex. Est dolorum minima dolor aut ut, accusantium vitae architecto aliquid nostrum numquam quibusdam.
+					</p>
+				</div>
+			</article>
+
+			<article class="faq">
+				<div class="faq__icon"><i class="uil uil-plus"></i></div>
+				<div class="question__answer">
+					<h4>How do I know the right courses for me?</h4>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium quis qui similique quidem at voluptatem ex. Est dolorum minima dolor aut ut, accusantium vitae architecto aliquid nostrum numquam quibusdam.
+					</p>
+				</div>
+			</article>
+		</div>
+	</section>
+
+	<script type="text/javascript" src="js/main.js"></script>
+</body>
+
 </html>
