--- a/index.html
+++ b/index.html
@@ -282,6 +282,148 @@
 		</div>
 	</section>
 
+	<!-- end faq -->
+
+    
+    <section class="container testimonials__container mySwiper">
+		<h2>Students' Testimonials</h2>
+		<div class="swiper-wrapper">
+			<article class="testimonial swiper-slide">
+				<div class="avatar">
+					<img src="./images/avatar1.jpg">
+				</div>
+				<div class="testimonial__info">
+					<h5>Deborah Arch</h5>
+					<small>Student</small>
+				</div>
+				<div class="testimonial__body">
+					<p>
+						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi corporis officiis sint dolore amet voluptatibus perspiciatis animi facere? Sed, rerum. Rem eveniet aut illo!
+					</p>
+				</div>
+			</article>
+
+			<article class="testimonial swiper-slide">
+				<div class="avatar">
+					<img src="./images/avatar2.jpg">
+				</div>
+				<div class="testimonial__info">
+					<h5>Ernest Achiever</h5>
+					<small>Web Developer</small>
+				</div>
+				<div class="testimonial__body">
+					<p>
+						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi corporis officiis sint dolore amet voluptatibus perspiciatis animi facere? Sed, rerum. Rem eveniet aut illo!
+					</p>
+				</div>
+			</article>
+
+			<article class="testimonial swiper-slide">
+				<div class="avatar">
+					<img src="./images/avatar3.jpg">
+				</div>
+				<div class="testimonial__info">
+					<h5>Charles Boyd</h5>
+					<small>Student</small>
+				</div>
+				<div class="testimonial__body">
+					<p>
+						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi corporis officiis sint dolore amet voluptatibus perspiciatis animi facere? Sed, rerum. Rem eveniet aut illo!
+					</p>
+				</div>
+			</article>
+
+			<article class="testimonial swiper-slide">
+				<div class="avatar">
+					<img src="./images/avatar4.jpg">
+				</div>
+				<div class="testimonial__info">
+					<h5>Diana Roy</h5>
+					<small>Student</small>
+				</div>
+				<div class="testimonial__body">
+					<p>
+						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi corporis officiis sint dolore amet voluptatibus perspiciatis animi facere? Sed, rerum. Rem eveniet aut illo!
+					</p>
+				</div>
+			</article>
+
+			<article class="testimonial swiper-slide">
+				<div class="avatar">
+					<img src="./images/avatar5.jpg">
+				</div>
+				<div class="testimonial__info">
+					<h5>Jane Doe</h5>
+					<small>Student</small>
+				</div>
+				<div class="testimonial__body">
+					<p>
+						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi corporis officiis sint dolore amet voluptatibus perspiciatis animi facere? Sed, rerum. Rem eveniet aut illo!
+					</p>
+				</div>
+			</article>
+		</div>
+		<div class="swiper-pagination"></div>
+	</section>
+
+	<!-- end of testimonial ------------------------->
+
+	
+	<footer>
+        <div class="container footer__container">
+          <div class="footer__1">
+            <a href="index.html" class="footer__logo"><h4>EDU4ALL</h4></a>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis ipsum nobis ratione.
+            </p>
+          </div>
+  
+          <div class="footer__2">
+            <h4>Permalinks</h4>
+            <ul class="permalinks">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="courses.html">Courses</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </div>
+  
+          <div class="footer__3">
+            <h4>Privacy</h4>
+            <ul class="privacy">
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Terms and conditions</a></li>
+              <li><a href="#">Refund Policy</a></li>
+            </ul>
+          </div>
+  
+          <div class="footer__4">
+            <h4>Contact Us</h4>
+            <div>
+              <p>000 234 555</p>
+              <p>EDU4ALL@gmail.com</p>
+            </div>
+  
+            <ul class="footer__socials">
+              <li>
+                <a href="#"><i class="uil uil-facebook-f"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="uil uil-instagram-alt"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="uil uil-twitter"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="uil uil-linkedin-alt"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__copyright">
+            <small>Copyright &copy; EDU4ALL</small>
+        </div>
+      </footer>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 
