--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 <body>
     <nav>
         <div class="container nav__container">
-            <a href="index.html"><h4>EGATOR</h4></a>
+            <a href="index.html"><h4>EDU4ALL</h4></a>
             <ul class="nav__menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -99,7 +99,7 @@
             <img src="./images/tm1.jpg">
         </div>
         <div class="team__member-info">
-            <h4>Shatta Wale</h4>
+            <h4>Shawna Wale</h4>
             <p>Expert Tutor</p>
         </div>
         <div class="team__member-socials">
@@ -178,7 +178,7 @@
             <img src="./images/tm6.jpg">
         </div>
         <div class="team__member-info">
-            <h4>Edem Quist</h4>
+            <h4>Adam Quist</h4>
             <p>Expert Tutor</p>
         </div>
         <div class="team__member-socials">
@@ -260,8 +260,8 @@
           <div class="footer__4">
             <h4>Contact Us</h4>
             <div>
-              <p>+01 234 567 8910</p>
-              <p>shakir260@gmail.com</p>
+              <p>000 245 637</p>
+              <p>EDU4ALL@gmail.com</p>
             </div>
   
             <ul class="footer__socials">
@@ -281,7 +281,7 @@
           </div>
         </div>
         <div class="footer__copyright">
-            <small>Copyright &copy; EGATOR YouTube Tutorials</small>
+            <small>Copyright &copy; EDU4ALL</small>
         </div>
       </footer>
 
